--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     <section class="contact">
       <h2>Get in touch</h2>
-      <p>Email us at <a href="mailto:enquiries@zuuka.com">enquiries@zuuka.com</a></p>
+      <p>Email us at <a href="mailto:enquiries@goko.nz">enquiries@goko.nz</a></p>
     </section>
   </main>
 
