--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
   <header>
     <h1 class="logo">zuuka</h1>
-    <p class="tagline">Simpler, smarter, greener: the zuuka next-generation drug infusion pump</p>
+    <p class="tagline">Simpler, smarter, greener: the next-generation zuuka drug infusion pump</p>
   </header>
 
   <main>
@@ -25,7 +25,7 @@
 
     <section class="about">
       <p>
-        Zuuka is resetting the expectations of drug infusion pumps, radically simplifying prescription, support, and maintenance. 
+        Zuuka is resetting the expectations of drug infusion pumps, radically simplifying use, prescription, and support. 
         A simpler, more effective pump results in better patient outcomes — it’s as simple as that.
       </p>
     </section>
@@ -33,15 +33,15 @@
     <section class="audiences">
       <div class="audience-box">
         <h2>For Patients</h2>
-        <p>Infusion should fit your life, not the other way around. Zuuka is designed to be discreet, easy to use, and better for the environment — giving you more freedom and confidence in your therapy.</p>
+        <p>Your pump should fit your life, not the other way around. Zuuka is designed to be discreet, easy to use, and better for the environment — giving you more freedom and confidence in your therapy.</p>
       </div>
       <div class="audience-box">
         <h2>For Clinicians</h2>
-        <p>Zuuka simplifies prescription and support, reducing device complexity and helping you focus on patient care. Smarter connectivity means clearer insights, fewer steps, and better outcomes.</p>
+        <p>Zuuka simplifies prescription and support, reducing device complexity and helping you focus on patient care. Smarter connectivity means clearer insights, simpler operation means less support, and these both lead to better outcomes.</p>
       </div>
       <div class="audience-box">
         <h2>For Investors</h2>
-        <p>The global infusion market is ripe for change. Zuuka’s platform approach addresses patient, clinician, and payer needs with a solution that is simpler, greener, and built for scale.</p>
+        <p>The global infusion market is screaming for change. Zuuka’s approach to drug delivery addresses patient, clinician, and payer needs with a solution that is simpler, greener, and built for scale.</p>
       </div>
     </section>
 
