--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     <section class="audiences">
       <div class="audience-box">
         <h2>For Patients</h2>
+        <img src="https://www.khulsey.com/portfolioimages/prudential-lighting-exploded-view.jpg">
         <p>Your pump should fit your life, not the other way around. Zuuka is designed to be discreet, easy to use, and better for the environment — giving you more freedom and confidence in your therapy.</p>
       </div>
       <div class="audience-box">
