Updated Sam profile again

--- a/test.html
+++ b/test.html
@@ -293,7 +293,7 @@
               {
                 name: 'Sam Stewart',
                 role: 'Chairperson',
-                bio: 'Sam Stewart leads venture-building initiatives at Precast Ventures and Calder Stewart, and is an active investor in early-stage businesses both directly and through his family office. A Harvard alumni with a keen focus upon innovation and commercialization, Sam brings a passion for growth and an eye for the US market.',
+                bio: 'Sam Stewart leads venture-building initiatives at Precast Ventures and Calder Stewart, and is an active investor in early-stage businesses both directly and through his family office. A Harvard Business School alumni with a keen focus upon innovation and commercialization, Sam brings a passion for growth and an eye for the US market.',
                 linkedin: 'https://www.linkedin.com/in/placeholder-sam/',
                 image: 'profile.sam.grey.jpeg',
               },
