Further change to Jake's bio

--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
               {
                 name: 'Jake Campbell',
                 role: 'CTO & Co-founder',
-                bio: 'Jake Campbell is a mechanical engineer with a PhD from the University of Canterbury. His background spans medical device prototyping, sensing systems, and early-stage medtech development, with experience taking an idea from prototype through to proof-of-concept clinical trials conducted through academic research programmes. He served as technical lead on a multi-year, multi-million-dollar research programme focused on translating research concepts into technologies with commercial potential.',
+                bio: 'Jake Campbell holds a PhD in Mechanical Engineering from the University of Canterbury, with experience taking a medical device from idea through to proof-of-concept research clinical trials. His work bridges academic research and early-stage medical device development.',
                 linkedin: 'https://www.linkedin.com/in/placeholder-jake/',
                 image: 'profile.jake.grey.jpeg',
               },
