Updated LinkedIn links

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                 name: 'Jake Campbell',
                 role: 'CTO & Co-founder',
                 bio: 'Jake Campbell holds a PhD in Mechanical Engineering from the University of Canterbury, with experience taking a medical device from idea through to proof-of-concept research clinical trials. His work bridges academic research and early-stage medical device development.',
-                linkedin: 'https://www.linkedin.com/in/placeholder-jake/',
+                linkedin: 'https://www.linkedin.com/in/jake-campbell-engineer/',
                 image: 'profile.jake.grey.jpeg',
               },
               {
@@ -294,7 +294,7 @@
                 name: 'Sam Stewart',
                 role: 'Chairperson',
                 bio: 'Sam Stewart leads venture-building initiatives at Precast Ventures and Calder Stewart, and is an active investor in early-stage businesses both directly and through his family office. A Harvard Business School alumni with a keen focus upon innovation and commercialization, Sam brings a passion for growth and an eye for the US market.',
-                linkedin: 'https://www.linkedin.com/in/placeholder-sam/',
+                linkedin: 'https://www.linkedin.com/in/sambstewart/',
                 image: 'profile.sam.grey.jpeg',
               },
             ].map((member, i) => (
